<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="app_title">Simple Calculator</string>
    <string name="label_1">Enter Number 1</string>
    <string name="label_2">Enter Number 2</string>
    <string name="answer">Answer is :</string>
    <string name="add">+</string>
    <string name="sub">−</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
</resources>